src/app/layout-editor/left-panel/left-panel.component.scss
@mixin font($font-weight, $font-size, $line-height, $color) {
  font-family: 'IBM Plex Sans', sans-serif;
  letter-spacing: 0%;
  font-weight: $font-weight;
  font-size: $font-size;
  line-height: $line-height;
  color: $color;
}

:host {
  min-width: 250px;
  height: 100%;
  flex-basis: 250px;
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  border-right: 1px solid var(--border-color);
}

.header {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-x3);
  padding: var(--spacing-x4);
  border-bottom: 1px solid var(--border-color);
  color: var(--text-base);
  max-width: 100%;

  .title-menu-wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;

    .title {
      display: flex;
      align-items: center;
      gap: var(--spacing-x3);

      svg {
        fill: var(--icon-dark);

        &:hover { cursor: pointer; }
      }

      h1 { @include font(500, var(--font-size-x3), var(--spacing-x8), var(--text-base)); }

      h1.clickable {
        cursor: pointer;
      }
    }
  }

  h2 {
    @include font(400, var(--font-size-x1-5), var(--spacing-x4), var(--text-light));
    margin-block: 6px;
  }

  .filters {
    display: flex;
    flex-wrap: wrap;
    gap: var(--spacing-x2);
    max-width: 100%;

    .filter {
      @include font(400, var(--font-size-x1-5), var(--spacing-x5), var(--text-base));
      padding: var(--spacing-x1) var(--spacing-x2);
      background-color: var(--bg-base);
      border: 1px solid var(--border-tertiary-color);
      border-radius: var(--spacing-x1);
      white-space: nowrap;

      &:hover { cursor: pointer; }

      .filter-number { @include font(400, var(--font-size-x1-5), var(--spacing-x5), var(--text-light)); }
    }

    .selected-filter {
      border-color: var(--primary);
      background-color: var(--bg-selected);
    }
  }
}

.thumbnails-scroll {
  width: 100%;
  height: 100%;
}

.thumbnails-wrapper {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-x4);
  padding: var(--spacing-x4);
  padding-top: var(--spacing-x5);
  width: 100%;
  height: 100%;
  // overflow-y: hidden;
}

.thumbnail-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100px;
  width: 100%;
  background-color: var(--bg-bright);
  border: 1px solid var(--border-color);
  border-radius: var(--spacing-x1);
  position: relative;

  &:hover { cursor: pointer; }

  img {
    max-height: 100%;
    max-width: 100%;
  }

  .status-icon {
    position: absolute;
    top: var(--spacing-x2);
    left: var(--spacing-x2);
    width: 10px;
    height: 10px;
    border-radius: 50%;
    outline: 2px solid var(--bg-bright);

    &:hover { outline-color: var(--icon-white); }

    &::before {
      content: "";
      position: absolute;
      bottom: 50%;
      left: 80%;
      transform: translateY(50%);
      border: 6px solid transparent;
      border-right-color: var(--bg-base);
      filter: drop-shadow(-1px 0 1px rgba(0, 0, 0, 0.1));
      transition: opacity 0.2s ease, transform 0.2s ease;
      opacity: 0;
      z-index: 11;
    }

    &:hover::before {
      opacity: 1;
      transform: translateX(4px) translateY(50%);
    }

    &::after {
      content: attr(data-tooltip);
      position: absolute;
      bottom: 50%;
      left: 200%;
      transform: translateY(50%);
      background-color: var(--bg-base);
      color: var(--text-base);
      font-family: 'Karla', sans-serif;
      padding: var(--spacing-x2) var(--spacing-x3);
      border-radius: var(--spacing-x1);
      font-size: var(--font-size-x1);
      display: inline-block;
      width: max-content;
      max-width: 150px;
      white-space: normal;
      overflow-wrap: break-word;
      opacity: 0;
      pointer-events: none;
      transition: opacity 0.2s ease, transform 0.2s ease;
      box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
      z-index: 10;
    }
    
    &:hover::after {
      opacity: 1;
      transform: translateX(4px) translateY(50%);
    }
  }

  .success { background-color: var(--status-icon-success); }

  .warning { background-color: var(--status-icon-warning); }

  .edited { background-color: var(--status-icon-edited); }

  .error { background-color: var(--status-icon-error); }
}

.selected { border-color: var(--primary); }

app-loader { margin-top: var(--spacing-x5); }

